--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,20 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Avaliação Formadora 3</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="infos">
+    <ion-item
+      ><img
+        src="https://scontent.fgig23-1.fna.fbcdn.net/v/t39.30808-6/438032062_3808872046102674_2317139870001007045_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHlou_lnGt0Vo3D4P26EZ9sJrlNHyiHLVImuU0fKIctUvchixdREVrImT3PHUIpD-jtsY-0uB_gyPH3Zisox3nT&_nc_ohc=STcUSPIZ5BAQ7kNvgHWtgqW&_nc_ht=scontent.fgig23-1.fna&oh=00_AYCP5F9vUvhFT5Jz1Y_2F80li2BLBo9Ea9O1H7OQPMctKQ&oe=6652B173"
+    /></ion-item>
+    <h3>Gil Guimarães</h3>
+    <p>Código: 22104616</p>
   </div>
+
+  <ion-button routerLink="/cep" expand="full"
+    >Ir para a página de consulta de CEP</ion-button
+  >
 </ion-content>
